--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,60 @@ section{
 .portfolio h1{text-align: center;
  }
 
+.the_portfolio{
+    width: 100%;
+    height: auto;
+    background: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+
+.port{
+    height:200px;
+    width: 40%;
+    margin: 30px;
+    background-size: 100%;
+    transition: 0.5s;
+    background-position: center;
+    float: left;
+    position: relative;
+    box-sizing: border-box;
+
+}
+
+.port:hover{background-size:110%;
+}
+
+.port:after{
+    content: attr(data-text);
+    position: absolute;
+    top: 100%;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    word-wrap: break-word;
+    overflow: hidden;
+    background-color:rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 0 8px;
+    opacity: 0%;
+    transition: 0.5s;
+    white-space: pre-wrap;
+    text-align: center;
+}
+.port:hover:after{
+    opacity: 1;
+    top:0;
+    padding: 8px;
+}
+.port:first-line{
+    color: #000;
+    font-weight: bold;
+    font-size: 1.5cm;
+}
+
 .contacts-section{
   background: url("assets/backgrounds/c_image.jpg") rgba(0, 0, 0, 0.5); 
   background-size: cover;
