changed my font size and font weight for my first line appearing in my portfolio images

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,8 +128,9 @@ section{
 }
 .port:first-line{
     color:white;
-    font-weight: bold;
-    font-size: 3px;
+    font-weight: bolder;
+    font-size:1.cm;
+
 }
 
 .contacts-section{
