--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,7 @@ section{
   background: url("assets/backgrounds/s_image.jpg") rgba(0, 0, 0, 0.5);
   background-size: cover;
   object-fit: cover;
-  width: 100%;
-  height: 50vh;
+  width: 100;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
